# Solana-gRPC_indexer-Rust

./: .env.example  .gitignore  Cargo.toml  README.md  env.example  transactions_sample.jsonl
.sqlx/: query-0540b44bc70839e39711851bd67a9f1526c69ec5832fa5060002b868adda0faa.json  query-11272012f8a5c933db21d6803d9e67601f119bd969fd28aad10b0e66155687d5.json  query-16569fb175810fb645a07250b91e7775e258ad4297fbdacfb617c4f24031382c.json  query-1e367ee18d56cadb29733a79d4806efb0f6ee9fc321aa5c065e10c0dc616bfae.json  query-26cbe48853019a0d1131565708d1468511d99ab7410587cb8efd3bf2f4ebac75.json  query-2986ce8574a7b2b5c67a0cf120ccc4b1ac9e5182bf6ef051a32f1a3c33bb14c7.json  query-3c25f9be0c108c84e7ea0bb6fa9d154658ce855f09c57fc3312faf70c5078e32.json  query-46a0ab7f12f35ba54b407f94a92425bcac0a284db00521a0ab5e4479b09db23d.json  query-6ccad17cef890d36b14819681cfdc155765c4a1bcf0ccf0a2552d9e23b1b3124.json  query-6d4151f68c810f427fcde1ad388c0554c27fe88f33be508f3c16f9fb7e2b79dd.json  query-6e1736f8a30ee8aa0cc7315577af81bab98f097c1334e451f9ce314153132a0a.json  query-8f35502aad7789b8a984bbd4bc1d6eccc9e3f7894ea576d722a926b65b80f152.json  query-acb2eec4ecce35467c333e0156389029d29f3bdec77773fb1c27fc0f0d016d27.json  query-b3ba3b84ee4a88f650237a26578e1c956477ae050f41784aa48c835b3cb772db.json  query-c1a13327e2cab6ee4cfc13021e801d23a0fe8028072e0dff322f05815899061f.json  query-cc7acb203f133d1597d0d79ce859c98534b289963fb9de3f284ac1b82146eabe.json  query-e900968e18b17ee7194e9b5f6cd432cd80f5e98583834965ee2bfb37bb0e4692.json  query-edb94fc476d6dd077d45e8a00ef0a90514e15decb1954f0412902f3943fc8668.json  query-f08b52b1cea3ed3b1a256a13a94a0c8ec6bec55ecb202f310692e0c68d329b75.json  query-fce542033a174389536e27129b017c41174d2274b74ee5cbd619088a60f1fe92.json  query-ff3a8ebbf38b418044f80ddb3edde41397736af18a1ad74ac1891f927737efc9.json
migrations/mysql/: 001_initial.sql
migrations/postgres/: 001_initial.sql
migrations/sqlite/: 001_initial.sql  002_wallet_tracking.sql  003_account_tracking.sql
src/: account_watcher.rs  animations.rs  api.rs  cache.rs  config.rs  database.rs  enhanced_logger.rs  flow_monitor.rs  grpc_server.rs  ipfs.rs  ipfs_storage.rs  logger_old.rs  main.rs  metrics.rs  performance_benchmark.rs  slot_tracker.rs  wallet_tracker.rs  webhooks.rs  yellowstone_monitor.rs
src/proto/helloworld/: helloworld.proto
(+1 files in other folders)
